--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,16 @@ jobs:
         timeout-minutes: 5
 
         steps:
+            # set up Node
+            - name: Setup Node.js
+                uses: actions/setup-node@v3
+                with:
+                node-version: 20
+
+            # install canvas
+            - name: Install canvas
+                run: npm install canvas
+                
             # generates a snake game from a github user (<github_user_name>) contributions graph, output a svg animation at <svg_out_path>
             - name: generate github-contribution-grid-snake.svg
               uses: Platane/snk/svg-only@v3
