--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,25 +21,14 @@ jobs:
         timeout-minutes: 5
 
         steps:
-            # set up Node
-            - name: Setup Node.js
-              uses: actions/setup-node@v3
-              with:
-                  node-version: 20
-
-            # install canvas
-            - name: Install canvas
-              run: npm install canvas
-
             # generates a snake game from a github user (<github_user_name>) contributions graph, output a svg animation at <svg_out_path>
             - name: generate github-contribution-grid-snake.svg
               uses: Platane/snk/svg-only@v3
               with:
                   github_user_name: ${{ github.repository_owner }}
                   outputs: |
-                      dist/github-contribution-grid-snake.svg
+                      dist/github-contribution-grid-snake.svg?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
                       dist/github-contribution-grid-snake-dark.svg?palette=github-dark
-                      dist/github-contribution-grid-snake.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
 
             # push the content of <build_dir> to a branch
             # the content will be available at https://raw.githubusercontent.com/<github_user>/<repository>/<target_branch>/<file> , or as github page
